# RPi3OnBoard

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
IoTDeviceManagerEmulator/: CMakeLists.txt
IoTDeviceManagerEmulator/Impl/: IoTDeviceDeviceManager.cpp  IoTDeviceDeviceManager.h  IoTDeviceOpenAPIManager.cpp  IoTDeviceOpenAPIManager.h
IoTDeviceManagerEmulator/Linux/: IoTDeviceManagerEmulator.cpp
IoTDeviceManagerEmulator/Win32/IoTDeviceManagerEmulator/: IoTDeviceManagerEmulator.cpp  IoTDeviceManagerEmulator.h  IoTDeviceManagerEmulator.rc  IoTDeviceManagerEmulator.sln  IoTDeviceManagerEmulator.vcxproj  IoTDeviceManagerEmulator.vcxproj.filters  IoTDeviceManagerEmulatorDlg.cpp  IoTDeviceManagerEmulatorDlg.h  ReadMe.txt  resource.h  stdafx.cpp
IoTDeviceManagerEmulator/Win32/IoTDeviceManagerEmulator/UIControl/: UIColorEdit.cpp  UIColorEdit.h  UIColorStaticST.cpp  UIColorStaticST.h  UIImageViewCtrl.cpp  UIImageViewCtrl.h
IoTDeviceManagerEmulator/Win32/IoTDeviceManagerEmulator/res/: IoTDeviceManagerEmulator.rc2
